Fixed Database connection issue and improved API package